stateDiagram-v2
    [*] --> NO_PROFILE
    NO_PROFILE --> INTRO: PROFILE_CREATED (playerId)
    NO_PROFILE --> MAIN_MENU: SESSION_RESTORED (playerId)
    INTRO --> MAIN_MENU: TO_MENU
    MAIN_MENU --> NO_PROFILE: CHANGE_NICKNAME
    MAIN_MENU --> CONNECTING: JOIN_GAME (lobbyId)
    MAIN_MENU --> CONNECTING: CREATE_ROOM
    CONNECTING --> JOIN_REQUEST: ROOM_CONNECTED (gameId, lobbyId)
    CONNECTING --> GAME_LOBBY: CREATE_GAME (gameId, isHost = 1, lobbyId)
    CONNECTING --> MAIN_MENU: CONNECT_FAILED (error)
    CONNECTING --> GAME_LOBBY: REQUEST_ACCEPTED(gameId, lobbyId)
    JOIN_REQUEST --> MAIN_MENU: CANCEL
    JOIN_REQUEST --> MAIN_MENU: EXIT
    JOIN_REQUEST --> MAIN_MENU: REJECTED
    JOIN_REQUEST --> MAIN_MENU: TIMED_OUT
    JOIN_REQUEST --> GAME_LOBBY: REQUEST_ACCEPTED(gameId, lobbyId)
    GAME_LOBBY --> MAIN_MENU: EXIT
    GAME_LOBBY --> GAME_LOBBY: APPROVE_REQUEST
    GAME_LOBBY --> GAME_LOBBY: REJECT_REQUEST
    GAME_LOBBY --> GAME_STARTING: START_GAME (gameId, playerIds)
    GAME_STARTING --> IN_GAME: [-]
    IN_GAME --> SCORE_SCREEN: END_GAME (scoreBoard)
    IN_GAME --> MAIN_MENU: ERROR
    IN_GAME --> MAIN_MENU: EXIT
    SCORE_SCREEN --> MAIN_MENU: EXIT

note right of NO_PROFILE
+Init
end note

note right of [*]
inject/getPlayerId
#{playerId = getPlayerId(), authError = 0, timedOut = 0}
subscribe/profile_created PROFILE_CREATED ($playerId)
subscribe/profile_cleared CHANGE_NICKNAME
subscribe/session_restored SESSION_RESTORED ($playerId)
subscribe/room_create_requested CREATE_ROOM
subscribe/room_connected ROOM_CONNECTED ($gameId, $lobbyId)
subscribe/room_connect_failed CONNECT_FAILED ($error)
subscribe/request_rejected REJECTED
subscribe/request_timeout TIMED_OUT ($timedOut = 1)
subscribe/intro_complete TO_MENU
subscribe/cancel_game_request CANCEL
subscribe/join_game_request JOIN_GAME ($lobbyId)
subscribe/mode_join_accepted REQUEST_ACCEPTED ($gameId, $lobbyId)
subscribe/lobby_created CREATE_GAME ($gameId, $isHost = 1, $lobbyId)
subscribe/game_start START_GAME ($gameId, $playerIds)
subscribe/game_end END_GAME ($scoreBoard)
subscribe/player_exit EXIT
subscribe/player_cancel CANCEL
subscribe/lobby_closed EXIT
subscribe/lobby_request_approved APPROVE_REQUEST
subscribe/lobby_request_rejected REJECT_REQUEST
end note

note right of INTRO
#{playerId} <= $playerId
end note

note left of CONNECTING
#{playerId, lobbyId, timedOut} <= coalesce($playerId, #playerId), coalesce($lobbyId, #lobbyId), 0
end note

note right of MAIN_MENU
#{playerId, timedOut, authError} <= coalesce($playerId, #playerId), coalesce($timedOut, 0), coalesce($error, 0)
end note

note left of GAME_LOBBY
#{ playerId, gameId, isHost, lobbyId } <= coalesce($playerId, #playerId), coalesce($gameId, #gameId), coalesce($isHost, #isHost, 0), coalesce($lobbyId, #lobbyId)
emit/join_lobby ($gameId, $playerId, $isHost, $lobbyId)
end note

note right of JOIN_REQUEST
#{playerId, gameId, lobbyId, timedOut} <= coalesce($playerId, #playerId), coalesce($gameId, #gameId), coalesce($lobbyId, #lobbyId), 0
end note

note left of GAME_STARTING
+ByPass
#{gameId, playerIds} <= $gameId, $playerIds
emit/game_started ($gameId, $playerIds, #lobbyId)
end note

note right of SCORE_SCREEN
#{scoreBoard} <= $scoreBoard
end note
